--- a/apps/marketplace-tracker/package.json
+++ b/apps/marketplace-tracker/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "marketplace-tracker",
+  "name": "@cool-website/marketplace-tracker",
   "version": "0.1.0",
+  "description": "Facebook Marketplace deal finder - built on @cool-website/job-runner",
   "type": "module",
   "bin": {
-    "mkt": "./src/cli/index.ts"
+    "mkt": "./src/cli.ts"
   },
   "scripts": {
-    "dev": "bun run src/cli/index.ts",
-    "serve": "bun run src/web/index.ts",
-    "build": "bun build src/cli/index.ts --compile --outfile dist/mkt",
-    "build:all": "bun run build:darwin-arm64 && bun run build:darwin-x64 && bun run build:linux-x64 && bun run build:linux-arm64",
-    "build:darwin-arm64": "bun build src/cli/index.ts --compile --target=bun-darwin-arm64 --outfile dist/mkt-darwin-arm64",
-    "build:darwin-x64": "bun build src/cli/index.ts --compile --target=bun-darwin-x64 --outfile dist/mkt-darwin-x64",
-    "build:linux-x64": "bun build src/cli/index.ts --compile --target=bun-linux-x64 --outfile dist/mkt-linux-x64",
-    "build:linux-arm64": "bun build src/cli/index.ts --compile --target=bun-linux-arm64 --outfile dist/mkt-linux-arm64",
+    "dev": "bun run src/cli.ts",
+    "serve": "bun run src/server.ts",
+    "build": "bun build src/cli.ts --compile --outfile dist/mkt",
     "typecheck": "bun x tsc --noEmit"
+  },
+  "dependencies": {
+    "@cool-website/job-runner": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "typescript": "^5.8.0"
-  },
-  "dependencies": {
-    "hono": "^4.11.1",
-    "marked": "^17.0.1"
   }
 }
