Remove web UI from job-runner, rename cool-website to digital-empire

--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cool-website/portfolio",
+  "name": "@digital-empire/portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
