--- a/packages/job-runner/package.json
+++ b/packages/job-runner/package.json
@@ -14,21 +14,13 @@
     "./cli": {
       "import": "./src/cli/index.ts",
       "types": "./src/cli/index.ts"
-    },
-    "./web": {
-      "import": "./src/web/index.ts",
-      "types": "./src/web/index.ts"
     }
   },
   "scripts": {
     "build": "bun build src/cli/index.ts --compile --outfile dist/ocr",
-    "dev": "bun run src/cli/index.ts",
-    "serve": "bun run src/web/index.ts"
+    "dev": "bun run src/cli/index.ts"
   },
-  "dependencies": {
-    "hono": "^4.0.0",
-    "marked": "^12.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/bun": "latest",
     "typescript": "^5.0.0"
