Add simplified marketplace UI with telegram notifications
- Create @summarize agent to chain fb-marketplace → telegram
- Add opencode.json with telegram-mcp server config
- Simplify marketplace-tracker: single search input + settings
- Store telegram config in data/config.json
- Auto-build prompts from search term + config

--- a/apps/marketplace-tracker/package.json
+++ b/apps/marketplace-tracker/package.json
@@ -13,7 +13,8 @@
     "typecheck": "bun x tsc --noEmit"
   },
   "dependencies": {
-    "opencode-job-runner": "workspace:*"
+    "opencode-job-runner": "workspace:*",
+    "hono": "^4.0.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
