Rename job-runner to openjob with interactive TUI and cron scheduler
- Rename packages/job-runner to packages/openjob
- Add interactive TUI (openjob command with no args):
  - Text input with @agent autocomplete from .opencode/agent/
  - Enter: run job + attach to tmux
  - Ctrl+B: run in background
  - Ctrl+S: schedule picker with cron presets
  - Ctrl+W: toggle web server + scheduler
- Add cron-based scheduler (replaces old interval format):
  - Supports standard cron: minute hour day month weekday
  - Checks every minute for due jobs
  - Human-readable descriptions (Every 4 hours, Daily at 9 AM, etc.)
- Update marketplace-tracker:
  - Use openjob package
  - Add @title agent (Haiku 4.5) to generate job titles
  - Add @telegram agent (Sonnet 4.5) for notifications
  - Server starts scheduler automatically
  - Multiline search input with Shift+Enter
- Clean up old CLI commands (add, edit, schedule replaced by TUI)
- Add data/ to gitignore (contains config with API keys)

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@ venv/
 __pycache__/
 *.pyc
 outputs/
-opencode.json
+
+# Job runner data (contains config with API keys)
+**/data/
 
 # Logs
 *.log
