--- a/packages/openjob/package.json
+++ b/packages/openjob/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "opencode-job-runner",
+  "name": "openjob",
   "version": "0.1.0",
-  "description": "CLI and SDK for running and scheduling OpenCode agent jobs",
+  "description": "Interactive CLI for running and scheduling OpenCode agent jobs",
   "type": "module",
   "bin": {
-    "ocr": "./src/cli/index.ts"
+    "openjob": "./src/cli/index.ts"
   },
   "exports": {
     ".": {
       "import": "./src/core/index.ts",
       "types": "./src/core/index.ts"
-    },
-    "./cli": {
-      "import": "./src/cli/index.ts",
-      "types": "./src/cli/index.ts"
     },
     "./web": {
       "import": "./src/web/index.ts",
@@ -21,16 +17,21 @@
     }
   },
   "scripts": {
-    "build": "bun build src/cli/index.ts --compile --outfile dist/ocr",
+    "build": "bun build src/cli/index.ts --compile --outfile dist/openjob",
     "dev": "bun run src/cli/index.ts",
-    "serve": "bun run src/web/index.ts"
+    "serve": "PORT=3458 bun run src/web/index.ts"
   },
   "dependencies": {
     "hono": "^4.0.0",
-    "marked": "^12.0.0"
+    "marked": "^12.0.0",
+    "ink": "^5.0.1",
+    "ink-text-input": "^6.0.0",
+    "react": "^18.2.0",
+    "cron-parser": "^4.9.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/react": "^18.2.0",
     "typescript": "^5.0.0"
   }
 }
