--- a/packages/openjob/package.json
+++ b/packages/openjob/package.json
@@ -19,19 +19,21 @@
   "scripts": {
     "build": "bun build src/cli/index.ts --compile --outfile dist/openjob",
     "dev": "bun run src/cli/index.ts",
-    "serve": "PORT=3458 bun run src/web/index.ts"
+    "tui": "bun run src/tui/index.tsx",
+    "serve": "bun run src/web/serve.ts",
+    "server": "bun run src/web/serve.ts"
   },
   "dependencies": {
     "hono": "^4.0.0",
-    "marked": "^12.0.0",
-    "ink": "^5.0.1",
+    "ink": "^6.6.0",
     "ink-text-input": "^6.0.0",
-    "react": "^18.2.0",
-    "cron-parser": "^4.9.0"
+    "marked": "^12.0.0",
+    "react": "^19.2.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/react": "^18.2.0",
+    "@types/react": "^19.0.0",
+    "react-devtools-core": "^7.0.1",
     "typescript": "^5.0.0"
   }
 }
