--- a/packages/openjob/tsconfig.json
+++ b/packages/openjob/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["ES2022"],
     "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "bundler",
@@ -8,7 +9,8 @@
     "skipLibCheck": true,
     "declaration": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "jsx": "react-jsx"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
