Add self-improving AI skill system and project manifesto
- Add AGENTS.md manifesto with core principles: self-building, self-improving,
  self-fixing, reconstructable, portable, open-source, standards-first,
  graceful degradation
- Add .opencode/skill/ system with example templates for bitwarden,
  qbittorrent, home-assistant, telegram
- Add self-improve skill for AI self-awareness and capability extension
- Update README with philosophy and skill documentation
- Remove deprecated marketplace-tracker and openjob packages
- Clean up old agent configs
- Update .gitignore to protect credential files while allowing examples

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,16 @@
 # DO NOT commit .env to git!
 
 # ===================
-# Home Assistant (ha-watch app)
+# Home Assistant
 # ===================
+# Your Home Assistant instance URL
 HA_URL=http://your-homeassistant-instance:8123
+
+# Long-Lived Access Token (recommended for API access)
+# Get it from: Profile (bottom left) -> Security tab -> Long-Lived Access Tokens -> Create Token
+HA_TOKEN=your_long_lived_access_token
+
+# Legacy username/password (for ha-watch app only)
 HA_USERNAME=your_username
 HA_PASSWORD=your_password
 
