--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,9 @@ outputs/
 *.pem
 *.key
 *.p12
+
+# OpenCode skills with credentials (use .example.md as template)
+.opencode/skill/*/SKILL.md
+!.opencode/skill/self-improve/SKILL.md
+!.opencode/skill/*/SKILL.example.md
+.opencode/skill/qbittorrent/torrent-sources.json
